markup of bolgs and event section is completed.

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
           </span>
         </div>
       </section>
+
       <section class="classes-section">
         <div class="section__title-wrapper">
           <h2 class="section__title heading-2">Our Classes</h2>
@@ -227,6 +228,7 @@
           </article>
         </div>
       </section>
+
       <section class="facility-section">
         <div class="section__title-wrapper">
           <h2 class="section__title heading-2">Our Infrastructure</h2>
@@ -259,6 +261,80 @@
             />
             <p class="facility-card-description">Chemistry Lab</p>
           </atricle>
+        </div>
+      </section>
+
+      <section class="blogs-events-section">
+        <div class="blogs-section">
+          <div class="section__title">
+            <h2 class="heading-2">Blogs</h2>
+            <p class="text-small">See More</p>
+          </div>
+          <div class="blogs-cards-wrapper">
+            <atricle class="blogs-cards">
+              <img src="./img/blog-1.jpg" alt="a picuter of books" />
+              <p class="blog-card-title text-medium-bold">
+                Lorem ipsum dolor sit amet.
+              </p>
+              <p class="blog-card-description text-small-extra">
+                This is description.
+              </p>
+            </atricle>
+            <atricle class="blogs-cards">
+              <img src="./img/blog-2.jpg" alt="a picuter of books" />
+              <p class="blog-card-title text-medium-bold">
+                Lorem ipsum dolor sit amet.
+              </p>
+              <p class="blog-card-description text-small-extra">
+                This is description.
+              </p>
+            </atricle>
+            <atricle class="blogs-cards">
+              <img src="./img/blog-3.jpg" alt="a picuter of books" />
+              <p class="blog-card-title text-medium-bold">
+                Lorem ipsum dolor sit amet.
+              </p>
+              <p class="blog-card-description text-small-extra">
+                This is description.
+              </p>
+            </atricle>
+          </div>
+        </div>
+        <div class="events-section">
+          <div class="section__title">
+            <h2 class="heading-2">Events</h2>
+            <p class="text-small">See More</p>
+          </div>
+          <div class="events-wrapper">
+            <ul class="events">
+              <li class="event">
+                <div class="event__date">
+                  <span class="text-large-bold">15</span>
+                  <span class="text-medium">Jan</span>
+                </div>
+                <div class="event__desc">
+                  <p class="text-medium-bold">
+                    This is a event headline. Lorem ipsum
+                  </p>
+                  <p class="text-medium">This is event description</p>
+                  <p class="text-small-extra">01 Jan, 1970</p>
+                </div>
+              </li>
+              <li class="event">
+                <div class="event__date">
+                  <span class="text-large-bold">15</span>
+                  <span class="text-medium">Jan</span>
+                </div>
+                <div class="event__desc">
+                  <p class="text-medium-bold">
+                    This is a event headline. Lorem ipsum
+                  </p>
+                  <p class="text-medium">This is event description</p>
+                  <p class="text-small-extra">01 Jan, 1970</p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
