blogs and events section finished, with other minor fixes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/hero.css" />
     <link rel="stylesheet" href="./css/classes.css" />
     <link rel="stylesheet" href="./css/facilities.css" />
+    <link rel="stylesheet" href="./css/blogs.css" />
     <script src="./js/app.js" defer></script>
     <title>Document</title>
   </head>
@@ -244,22 +245,30 @@
               src="./img/facility-1.jpg"
               alt="a picuter of the computer lab"
             />
-            <p class="facility-card-description">Computer Lab</p>
+            <p class="facility-card-description separator-gradient">
+              Computer Lab
+            </p>
           </atricle>
           <atricle class="facility-cards">
             <img src="./img/facility-2.jpg" alt="a picuter of the infirmary" />
-            <p class="facility-card-description">Infirmary</p>
+            <p class="facility-card-description separator-gradient">
+              Infirmary
+            </p>
           </atricle>
           <atricle class="facility-cards">
             <img src="./img/facility-3.jpg" alt="a picuter of the cafetaria" />
-            <p class="facility-card-description">Cafetaria</p>
+            <p class="facility-card-description separator-gradient">
+              Cafetaria
+            </p>
           </atricle>
           <atricle class="facility-cards">
             <img
               src="./img/facility-4.jpg"
               alt="a picuter of the chemistry lab"
             />
-            <p class="facility-card-description">Chemistry Lab</p>
+            <p class="facility-card-description separator-gradient">
+              Chemistry Lab
+            </p>
           </atricle>
         </div>
       </section>
@@ -274,28 +283,26 @@
             <atricle class="blogs-cards">
               <img src="./img/blog-1.jpg" alt="a picuter of books" />
               <p class="blog-card-title text-medium-bold">
-                Lorem ipsum dolor sit amet.
+                Reading a book daily: it's impact on mental growth.
               </p>
-              <p class="blog-card-description text-small-extra">
-                This is description.
-              </p>
+              <p class="blog-card-description text-small-extra">By John Doe</p>
             </atricle>
             <atricle class="blogs-cards">
               <img src="./img/blog-2.jpg" alt="a picuter of books" />
               <p class="blog-card-title text-medium-bold">
-                Lorem ipsum dolor sit amet.
+                Mental rot: a new side-effect of smartphones.
               </p>
               <p class="blog-card-description text-small-extra">
-                This is description.
+                By Sarah J. Dias
               </p>
             </atricle>
             <atricle class="blogs-cards">
               <img src="./img/blog-3.jpg" alt="a picuter of books" />
               <p class="blog-card-title text-medium-bold">
-                Lorem ipsum dolor sit amet.
+                Do your children have ADHD? know the ins-and-outs.
               </p>
               <p class="blog-card-description text-small-extra">
-                This is description.
+                By Dr. Fank Mason
               </p>
             </atricle>
           </div>
