Blogs and events section finished (#16)
* markup of bolgs and event section is completed.

* blogs and events section finished, with other minor fixes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/hero.css" />
     <link rel="stylesheet" href="./css/classes.css" />
     <link rel="stylesheet" href="./css/facilities.css" />
+    <link rel="stylesheet" href="./css/blogs.css" />
     <script src="./js/app.js" defer></script>
     <title>Document</title>
   </head>
@@ -244,23 +245,103 @@
               src="./img/facility-1.jpg"
               alt="a picuter of the computer lab"
             />
-            <p class="facility-card-description">Computer Lab</p>
+            <p class="facility-card-description separator-gradient">
+              Computer Lab
+            </p>
           </atricle>
           <atricle class="facility-cards">
             <img src="./img/facility-2.jpg" alt="a picuter of the infirmary" />
-            <p class="facility-card-description">Infirmary</p>
+            <p class="facility-card-description separator-gradient">
+              Infirmary
+            </p>
           </atricle>
           <atricle class="facility-cards">
             <img src="./img/facility-3.jpg" alt="a picuter of the cafetaria" />
-            <p class="facility-card-description">Cafetaria</p>
+            <p class="facility-card-description separator-gradient">
+              Cafetaria
+            </p>
           </atricle>
           <atricle class="facility-cards">
             <img
               src="./img/facility-4.jpg"
               alt="a picuter of the chemistry lab"
             />
-            <p class="facility-card-description">Chemistry Lab</p>
+            <p class="facility-card-description separator-gradient">
+              Chemistry Lab
+            </p>
           </atricle>
+        </div>
+      </section>
+
+      <section class="blogs-events-section">
+        <div class="blogs-section">
+          <div class="section__title">
+            <h2 class="heading-2">Blogs</h2>
+            <p class="text-small">See More</p>
+          </div>
+          <div class="blogs-cards-wrapper">
+            <atricle class="blogs-cards">
+              <img src="./img/blog-1.jpg" alt="a picuter of books" />
+              <p class="blog-card-title text-medium-bold">
+                Reading a book daily: it's impact on mental growth.
+              </p>
+              <p class="blog-card-description text-small-extra">By John Doe</p>
+            </atricle>
+            <atricle class="blogs-cards">
+              <img src="./img/blog-2.jpg" alt="a picuter of books" />
+              <p class="blog-card-title text-medium-bold">
+                Mental rot: a new side-effect of smartphones.
+              </p>
+              <p class="blog-card-description text-small-extra">
+                By Sarah J. Dias
+              </p>
+            </atricle>
+            <atricle class="blogs-cards">
+              <img src="./img/blog-3.jpg" alt="a picuter of books" />
+              <p class="blog-card-title text-medium-bold">
+                Do your children have ADHD? know the ins-and-outs.
+              </p>
+              <p class="blog-card-description text-small-extra">
+                By Dr. Fank Mason
+              </p>
+            </atricle>
+          </div>
+        </div>
+        <div class="events-section">
+          <div class="section__title">
+            <h2 class="heading-2">Events</h2>
+            <p class="text-small">See More</p>
+          </div>
+          <div class="events-wrapper">
+            <ul class="events">
+              <li class="event">
+                <div class="event__date">
+                  <span class="text-large-bold">15</span>
+                  <span class="text-medium">Jan</span>
+                </div>
+                <div class="event__desc">
+                  <p class="text-medium-bold">
+                    This is a event headline. Lorem ipsum
+                  </p>
+                  <p class="text-medium">This is event description</p>
+                  <p class="text-small-extra">01 Jan, 1970</p>
+                </div>
+              </li>
+              <li class="event">
+                <div class="event__date">
+                  <span class="text-large-bold">15</span>
+                  <span class="text-medium">Jan</span>
+                </div>
+                <div class="event__desc">
+                  <p class="text-medium-bold">
+                    This is a event headline. Lorem ipsum
+                  </p>
+                  <p class="text-medium">This is event description</p>
+                  <p class="text-small-extra">01 Jan, 1970</p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
