--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./css/classes.css" />
     <link rel="stylesheet" href="./css/facilities.css" />
     <link rel="stylesheet" href="./css/blogs.css" />
+    <link rel="stylesheet" href="./css/gallery.css" />
     <script src="./js/app.js" defer></script>
     <title>Document</title>
   </head>
@@ -158,12 +159,12 @@
           </div>
           <button class="slider__btn slider__btn--left">
             <svg class="sprite sprite--large">
-              <use href="img/sprite.svg#carousel_arrow"></use>
+              <use href="img/sprite.svg#carousel_arrow-left"></use>
             </svg>
           </button>
           <button class="slider__btn slider__btn--right">
             <svg class="sprite sprite--large">
-              <use href="img/sprite.svg#carousel_arrow"></use>
+              <use href="img/sprite.svg#carousel_arrow-right"></use>
             </svg>
           </button>
           <div class="dots"></div>
@@ -342,6 +343,37 @@
               </li>
             </ul>
           </div>
+        </div>
+      </section>
+
+      <section class="gallery-section">
+        <div class="section__title">
+          <h2 class="heading-2">Gallery</h2>
+          <p class="text-small">See More</p>
+        </div>
+        <div class="section__images">
+          <div class="image-wrapper">
+            <img src="./img/gallary-1.jpg" alt="" />
+            <img src="./img/gallary-2.jpg" alt="" />
+            <img src="./img/gallary-3.jpg" alt="" />
+            <img src="./img/gallary-4.jpg" alt="" />
+            <img src="./img/gallary-5.jpg" alt="" />
+            <img src="./img/gallary-6.jpg" alt="" />
+            <img src="./img/gallary-7.jpg" alt="" />
+            <img src="./img/gallary-8.jpg" alt="" />
+            <img src="./img/gallary-9.jpg" alt="" />
+            <img src="./img/gallary-10.jpg" alt="" />
+          </div>
+          <button class="gallery__btn gallery__btn--left">
+            <svg class="sprite sprite--large">
+              <use href="img/sprite.svg#carousel_arrow-left"></use>
+            </svg>
+          </button>
+          <button class="gallery__btn gallery__btn--right">
+            <svg class="sprite sprite--large">
+              <use href="img/sprite.svg#carousel_arrow-right"></use>
+            </svg>
+          </button>
         </div>
       </section>
     </main>
