testimonial setion complete

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./css/facilities.css" />
     <link rel="stylesheet" href="./css/blogs.css" />
     <link rel="stylesheet" href="./css/gallery.css" />
+    <link rel="stylesheet" href="./css/testimonial.css" />
     <script src="./js/app.js" defer></script>
     <title>Document</title>
   </head>
@@ -374,6 +375,142 @@
               <use href="img/sprite.svg#carousel_arrow-right"></use>
             </svg>
           </button>
+        </div>
+      </section>
+
+      <section class="testimonial-section">
+        <h2 class="testimonial__heading heading-2">
+          What our students and their parents says about us
+        </h2>
+        <div class="testimonial-cards">
+          <article class="testimonial-card">
+            <div class="review-icons">
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-filled"></use>
+              </svg>
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-filled"></use>
+              </svg>
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-filled"></use>
+              </svg>
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-filled"></use>
+              </svg>
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-half"></use>
+              </svg>
+            </div>
+            <div class="review text-small">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Distinctio, adipisci totam itaque quo nemo sed non accusantium?
+                Neque, quo tenetur impedit cum culpa quisquam magni expedita,
+                velit exercitationem rem earum quas repellat provident
+                recusandae est quos corrupti tempora quae illo?
+              </p>
+              <div class="review-author">
+                <p class="text-medium-bold">Jane Coopper</p>
+                <p class="text-small-extra">Student(10th standard)</p>
+              </div>
+            </div>
+          </article>
+          <article class="testimonial-card">
+            <div class="review-icons">
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-filled"></use>
+              </svg>
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-filled"></use>
+              </svg>
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-filled"></use>
+              </svg>
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-filled"></use>
+              </svg>
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-half"></use>
+              </svg>
+            </div>
+            <div class="review text-small">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Distinctio, adipisci totam itaque quo nemo sed non accusantium?
+                Neque, quo tenetur impedit cum culpa quisquam magni expedita,
+                velit exercitationem rem earum quas repellat provident
+                recusandae est quos corrupti tempora quae illo?
+              </p>
+              <div class="review-author">
+                <p class="text-medium-bold">Jenny Wilson</p>
+                <p class="text-small-extra">Parent</p>
+              </div>
+            </div>
+          </article>
+          <article class="testimonial-card">
+            <div class="review-icons">
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-filled"></use>
+              </svg>
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-filled"></use>
+              </svg>
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-filled"></use>
+              </svg>
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-filled"></use>
+              </svg>
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-half"></use>
+              </svg>
+            </div>
+            <div class="review text-small">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Distinctio, adipisci totam itaque quo nemo sed non accusantium?
+                Neque, quo tenetur impedit cum culpa quisquam magni expedita,
+                velit exercitationem rem earum quas repellat provident
+                recusandae est quos corrupti tempora quae illo?
+              </p>
+              <div class="review-author">
+                <p class="text-medium-bold">Esther Howard</p>
+                <p class="text-small-extra">Parent</p>
+              </div>
+            </div>
+          </article>
+          <article class="testimonial-card">
+            <div class="review-icons">
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-filled"></use>
+              </svg>
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-filled"></use>
+              </svg>
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-filled"></use>
+              </svg>
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-filled"></use>
+              </svg>
+              <svg class="sprite sprite--normal">
+                <use href="img/sprite.svg#icon-star-half"></use>
+              </svg>
+            </div>
+            <div class="review text-small">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Distinctio, adipisci totam itaque quo nemo sed non accusantium?
+                Neque, quo tenetur impedit cum culpa quisquam magni expedita,
+                velit exercitationem rem earum quas repellat provident
+                recusandae est quos corrupti tempora quae illo?
+              </p>
+              <div class="review-author">
+                <p class="text-medium-bold">Wade Warren</p>
+                <p class="text-small-extra">Parent</p>
+              </div>
+            </div>
+          </article>
         </div>
       </section>
     </main>
