--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               </ul>
             </li>
           </ul>
-          <form action="" class="search-form">
+          <form action="get" class="search-form">
             <input type="search" class="search-box" placeholder="Search..." />
             <svg class="sprite sprite--normal" role="img">
               <use href="img/sprite.svg#search"></use>
@@ -242,36 +242,36 @@
           </span>
         </div>
         <div class="facility-cards-wrapper">
-          <atricle class="facility-cards">
+          <article class="facility-cards">
             <img
               src="./img/facility-1.jpg"
-              alt="a picuter of the computer lab"
+              alt="a picture of the computer lab"
             />
             <p class="facility-card-description separator-gradient">
               Computer Lab
             </p>
-          </atricle>
-          <atricle class="facility-cards">
-            <img src="./img/facility-2.jpg" alt="a picuter of the infirmary" />
+          </article>
+          <article class="facility-cards">
+            <img src="./img/facility-2.jpg" alt="a picture of the infirmary" />
             <p class="facility-card-description separator-gradient">
               Infirmary
             </p>
-          </atricle>
-          <atricle class="facility-cards">
-            <img src="./img/facility-3.jpg" alt="a picuter of the cafetaria" />
+          </article>
+          <article class="facility-cards">
+            <img src="./img/facility-3.jpg" alt="a picture of the cafeteria" />
             <p class="facility-card-description separator-gradient">
-              Cafetaria
+              Cafeteria
             </p>
-          </atricle>
-          <atricle class="facility-cards">
+          </article>
+          <article class="facility-cards">
             <img
               src="./img/facility-4.jpg"
-              alt="a picuter of the chemistry lab"
+              alt="a picture of the chemistry lab"
             />
             <p class="facility-card-description separator-gradient">
               Chemistry Lab
             </p>
-          </atricle>
+          </article>
         </div>
       </section>
 
@@ -282,31 +282,31 @@
             <p class="text-small">See More</p>
           </div>
           <div class="blogs-cards-wrapper">
-            <atricle class="blogs-cards">
-              <img src="./img/blog-1.jpg" alt="a picuter of books" />
+            <article class="blogs-cards">
+              <img src="./img/blog-1.jpg" alt="a picture of books" />
               <p class="blog-card-title text-medium-bold">
                 Reading a book daily: it's impact on mental growth.
               </p>
               <p class="blog-card-description text-small-extra">By John Doe</p>
-            </atricle>
-            <atricle class="blogs-cards">
-              <img src="./img/blog-2.jpg" alt="a picuter of books" />
+            </article>
+            <article class="blogs-cards">
+              <img src="./img/blog-2.jpg" alt="a picture of books" />
               <p class="blog-card-title text-medium-bold">
                 Mental rot: a new side-effect of smartphones.
               </p>
               <p class="blog-card-description text-small-extra">
                 By Sarah J. Dias
               </p>
-            </atricle>
-            <atricle class="blogs-cards">
-              <img src="./img/blog-3.jpg" alt="a picuter of books" />
+            </article>
+            <article class="blogs-cards">
+              <img src="./img/blog-3.jpg" alt="a picture of books" />
               <p class="blog-card-title text-medium-bold">
                 Do your children have ADHD? know the ins-and-outs.
               </p>
               <p class="blog-card-description text-small-extra">
-                By Dr. Fank Mason
+                By Dr.Frank Mason
               </p>
-            </atricle>
+            </article>
           </div>
         </div>
         <div class="events-section">
